--- a/style.css
+++ b/style.css
@@ -3,9 +3,13 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.3rem;
   font-weight: 500;
-  color: white;
+  text-decoration: none;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
 body {
   width: auto;
   margin-top: 10rem;
@@ -42,14 +46,6 @@ body {
   padding-top: 0.8rem;
 }
 
-.cont1,
-.cont2,
-.cont3,
-.cont2 {
-  background-color: #d4d4d2;
-  color: #1c1c1c;
-}
-
 .cont2 i {
   color: #1c1c1c;
 }
@@ -65,6 +61,16 @@ body {
 .cont16 {
   color: white;
   background-color: #ff9500;
+}
+.cont1,
+.cont2,
+.cont3 {
+  background-color: #d4d4d2;
+}
+.cont1 a,
+.cont2 a,
+.cont3 a {
+  color: #1c1c1c;
 }
 .cont:hover {
   background-color: #5e5d5d83;
